# bird-dou

./: .gitignore  AGENTS.md  BIRD-Dou_Coding_Agent_Prompt_CN.md  BIRD-Dou_Implementation_Spec_CN.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
configs/eval/: .gitkeep  default.yaml
configs/model/: .gitkeep  bid_head_v1.yaml  bid_head_v2.yaml  bird_dou_belief_v1.yaml  bird_dou_features_v1.yaml  bird_dou_v1.yaml  compact_policy_v1.yaml  douzero_baseline.yaml  farmer_team_critic_v1.yaml  privileged_teacher_v1.yaml  proposal_v1.yaml
configs/rules/: canonical_full.yaml  douzero_post_bid.yaml  guandan_two_deck.yaml
configs/train/: .gitkeep  actor_system.yaml  algorithm_comparison.yaml  belief_pretrain.yaml  bidding.yaml  bird_dou_dmc_smoke.yaml  dmc_smoke.yaml  endgame_search.yaml  farmer_coordination.yaml  full_game_smoke.yaml  hybrid.yaml  inference_server.yaml  is_kd.yaml  league.yaml  search_distillation.yaml  vtrace.yaml
crates/ddz-batch/: ARCHITECTURE.md  Cargo.toml  MIGRATION.md  PROTOCOL.md  README.md
crates/ddz-batch/examples/: basic.rs
crates/ddz-batch/src/: cache.rs  lib.rs  reset.rs  version.rs
crates/ddz-batch/src/batch/: env.rs  legal.rs  mod.rs  observe.rs  reset.rs  restore.rs  step.rs
crates/ddz-batch/src/error/: display.rs  mod.rs
crates/ddz-batch/src/protocol/: actions.rs  codes.rs  events.rs  mod.rs  step.rs
crates/ddz-batch/src/protocol/observation/: card_play.rs  cards.rs  doubling.rs  landlord.rs  mod.rs  outcome.rs  reveal.rs  stake.rs  status.rs
crates/ddz-batch/tests/: batch_env.rs  common.rs  protocol.rs  reset.rs  restore.rs  step.rs  terminal.rs
crates/ddz-core/: Cargo.toml  README.md
crates/ddz-core/src/: action.rs  cards.rs  codec.rs  deal.rs  doubling.rs  event.rs  game.rs  landlord.rs  lib.rs  moves.rs  observation.rs  phase.rs  reveal.rs  seat.rs  stake.rs  state.rs  state_codec.rs
crates/ddz-core/tests/: cards.rs  core_contract.rs  game_types.rs  moves.rs  state_codec.rs
crates/ddz-pyo3/: Cargo.toml
crates/ddz-pyo3/src/: lib.rs
crates/ddz-rules/: ARCHITECTURE.md  Cargo.toml  MIGRATION.md  README.md
crates/ddz-rules/examples/: benchmark_apply_undo.rs  benchmark_lead_generation.rs  differential_probe.rs  douzero_post_bid.yaml  huanle_classic.template.yaml
crates/ddz-rules/src/: config.rs  deal.rs  detector.rs  economy.rs  engine.rs  generator.rs  lib.rs  match_v2.rs  settlement.rs
crates/ddz-rules/src/config/: hash.rs  mod.rs  model.rs  validate.rs
crates/ddz-rules/src/engine/: automatic.rs  error.rs  game.rs  history.rs  invariants.rs  landlord.rs  legal.rs  mod.rs  observe.rs  restore.rs  settle.rs
crates/ddz-rules/src/engine/transition/: calling.rs  card_play.rs  doubling.rs  mod.rs  reveal.rs  robbing.rs
crates/ddz-rules/src/moves/: attachments.rs  compare.rs  mod.rs
crates/ddz-rules/src/moves/detect/: mod.rs  patterns.rs
crates/ddz-rules/src/moves/generate/: chains.rs  four.rs  groups.rs  mod.rs
crates/ddz-rules/tests/: call_v2.rs  card_play.rs  common.rs  complete_game.rs  config.rs  doubling.rs  engine.rs  follow_generator.rs  golden_replay.rs  huanle_flow.rs  lead_generator.rs  match_v2.rs  move_detector.rs  moves.rs  observation.rs  post_bid_game.rs  reveal_v2.rs  rob_v2.rs  rule_config.rs  rule_config_v2.rs  seeded_deal.rs  settlement.rs  state_reversibility.rs
crates/ddz-search/: Cargo.toml
crates/ddz-search/src/: lib.rs
crates/guandan-pyo3/: Cargo.toml
crates/guandan-pyo3/src/: game.rs  legal.rs  lib.rs  model.rs  python.rs  state.rs
crates/guandan-rules/: Cargo.toml  README.md
crates/guandan-rules/src/: config.rs  lib.rs  report.rs
crates/guandan-rules/src/card/: error.rs  hand.rs  mod.rs  physical.rs  rank.rs  seat.rs
crates/guandan-rules/src/game/: action.rs  deal.rs  mod.rs  progress.rs  tests.rs
crates/guandan-rules/src/game/round/: mod.rs  outcome.rs  transition.rs
crates/guandan-rules/src/game/tribute/: assignment.rs  error.rs  mod.rs  plan.rs  validation.rs
crates/guandan-rules/src/movement/: compare.rs  kind.rs  mod.rs  sequence.rs  strength.rs
crates/guandan-rules/src/movement/detect/: mod.rs  patterns.rs
crates/guandan-rules/src/movement/generate/: groups.rs  mod.rs  sequences.rs
crates/guandan-rules/tests/: cards.rs  config.rs  generate.rs  moves.rs  tribute.rs
docs/: BELIEF.md  BIDDING.md  DISTILLATION.md  DISTRIBUTED_TRAINING.md  EVALUATION.md  FARMER_COORDINATION.md  FEATURE_SCHEMA.md  HUANLE_CLASSIC_V1.md  IMPLEMENTATION_PLAN.md  LICENSE_AUDIT.md  MODEL_ARCHITECTURE.md  REQUIREMENT_COVERAGE.md  RULES.md  SEARCH_AND_DEPLOYMENT.md  TRAINING.md
python/birddou/: __init__.py  _guandan_native.pyi  _native.pyi  batch_env.py  batch_types.py  env.py  env_types.py  schemas.py
scripts/: README.md  audit_m3_gate.py  benchmark_batch_env.py  benchmark_inference_server.py  benchmark_proposal.py  build_guandan_native.ps1  differential_douzero.py  fetch_douzero_baseline.py  fetch_perfectdou_baseline.py  perfectdou_worker.py  reproduce_douzero.sh  run_crossplay.sh  train_belief.sh  train_cardplay.sh  train_full_game.sh
tests/differential/: .gitkeep  test_douzero_integration.py
tests/golden_replays/: .gitkeep  post_bid_five_bombs.json
tests/performance/: .gitkeep  e011_batch_benchmark_20260722.json
tests/python/: test_action_encoder.py  test_actor_supervisor.py  test_arena.py  test_belief_bird_dou.py  test_belief_crf.py  test_belief_data_training.py  test_bid_head.py  test_bidding_training.py  test_bird_dou_dmc.py  test_bird_dou_model.py  test_bootstrap.py  test_crossplay_cli.py  test_deployment_distillation.py  test_distributed_training.py  test_dmc_smoke.py  test_douzero_differential.py  test_endgame_search.py  test_evaluation_metrics.py  test_farmer_coordination.py  test_full_game_trainer.py  test_history_encoder.py  test_huanle_classic_v1_spec.py  test_inspect_replay.py  test_league.py  test_milestone_gates.py  test_official_douzero_adapter.py  test_package.py  test_paired_deals.py  test_perfectdou_baseline.py  test_privileged_distillation.py  (+14 more)
web/: index.html  package-lock.json  package.json
(+111 files in other folders)
