[workspace]
members = [
    "crates/ddz-core",
    "crates/ddz-rules",
    "crates/ddz-batch",
    "crates/ddz-search",
    "crates/ddz-pyo3",
    "crates/guandan-rules",
    "crates/guandan-pyo3",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
numpy = "0.29.0"
proptest = { version = "1.11.0", default-features = false, features = ["std"] }
pyo3 = { version = "0.29.0", features = ["abi3-py311"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
sha2 = "0.10.9"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
