[package]
name = "ddz-batch"
description = "Batched BIRD-Dou environments"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ddz-core = { path = "../ddz-core" }
ddz-rules = { path = "../ddz-rules" }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
