[package]
name = "ddz-batch"
description = "Native batched BIRD-Dou environments with packed Rust-owned buffers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ddz-core = { path = "../ddz-core" }
ddz-rules = { path = "../ddz-rules" }

[lints]
workspace = true
