[package]
name = "ddz-rules"
description = "Rules and legal-action generation for BIRD-Dou"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ddz-core = { path = "../ddz-core" }
serde.workspace = true
serde_yaml_ng.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
