[package]
name = "ddz-rules"
description = "Authoritative DouDizhu rules, move generation, and game transitions for BIRD-Dou"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ddz-core = { path = "../ddz-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true

[lints]
workspace = true
