[package]
name = "guandan-pyo3"
description = "Python boundary for the independent Guandan rules engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "_guandan_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
guandan-rules = { path = "../guandan-rules" }
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

